Fixed issue #06030: answeroption not left-aligned Dev Cleaned up CSS

--- a/templates/basic/template.css
+++ b/templates/basic/template.css
@@ -565,12 +565,17 @@ ul.cols-8 li,ul.cols-8-ul,table.cols-8 td {
   width: 47%;
 }
 
-.ranking {
-  
+/* DEFINED ABOVE UNDER "General list styles" - - - - -
+.multiple-opt
+*/
+.multiple-opt .answer li input {
+  vertical-align: top !important;
+  margin-top: 2px;
 }
 
-.language {
-  
+.multiple-opt .answer li label {
+  display: inline-block;
+  width: 90%;
 }
 
 /* The following styles only apply to modern (relatively) complete CSS2 compliant browsers. (Not less than IE 8) */
