--- a/templates/bluengrey/template.css
+++ b/templates/bluengrey/template.css
@@ -732,8 +732,14 @@ ul.cols-2-ul label,ul.cols-3-ul label,ul.cols-4-ul label,ul.cols-5-ul label,ul.c
 /* DEFINED ABOVE UNDER "General list styles" - - - - -
 .multiple-opt
 */
-.language {
-  
+.multiple-opt .answers li input {
+  vertical-align: top !important;
+  margin-top: 2px;
+}
+
+.multiple-opt .answers li label {
+  display: inline-block;
+  width: 90%;
 }
 
 /* The following styles only apply to modern (relatively) complete CSS2 compliant browsers. (Not less than IE 8) */
